@@ -1,3 +1,7 @@
+2010-04-28  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/DataProvider.cs: Track API changes.
+
 2010-03-26  Levi Bard  <levi@unity3d.com>
 
 	* Project/CProject.cs: Fix linking for library projects whose
